--- a/TimeZone/Views/Admin/Index.cshtml
+++ b/TimeZone/Views/Admin/Index.cshtml
@@ -20,7 +20,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Analytics</a></li>
                 <li><a href="#">Settings</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="/Home">Logout</a></li>
             </ul>
         </nav>
     </header>
@@ -28,7 +28,7 @@
     <div class="dashboard">
         <a href="/Admin/Products"><div class="rectangle blue"><span>Products</span></div></a>
         <a href="/Admin/Categories"> <div class="rectangle green"><span>Category</span></div></a>
-        <a> <div class="rectangle orange"><span>Orders</span></div></a>
+        <a href="/Admin/Feedback"> <div class="rectangle orange"><span>FeedBacks</span></div></a>
         <a> <div class="rectangle purple"><span>ShoppingCart</span></div></a>
     </div>
 
