--- a/TimeZone/Views/_ViewImports.cshtml
+++ b/TimeZone/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using TimeZone
 @using DataAccessLayer.Models;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Microsoft.AspNetCore.Identity;
+@inject SignInManager<DataAccessLayer.Models.Identity.ApplicationUser> _signInManager
+@inject UserManager<DataAccessLayer.Models.Identity.ApplicationUser> _userManger
